--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <div style="width:700px; margin:50px auto;">
 
     <form action="/fibonacci" class="form-quantity" autocomplete="off" method="post" novalidate>
-      <input type="text" value="" placeholder="Enter a number for calculate fibonacci" tabindex="1" class="quantity" name="quantity" />
+      <input type="text" value="" placeholder="Enter a number for calculate Fibonacci" tabindex="1" class="quantity" name="quantity" />
       <input type="button" value="OK" tabindex="2" class="form-submit" />
     </form>
   
